Added some original content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<title>Matteo Graizzaro Portfolio</title>
+		<title>Zackary Direen</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/uikit.min.css" />
@@ -26,7 +26,7 @@
 			<div class="uk-padding-small-top uk-section-muted uk-margin-medium-bottom uk-position-relative">
 				<div class="uk-width-1-1 uk-width-2xlarge@s uk-position-relative" style="padding: 0 15px;">
 					<header class="uk-padding-small-top uk-grid-small uk-grid-collapse@m uk-child-width-1-1" uk-grid>
-						<h1>Matteo Graizzaro</h1>
+						<h1>Zackary Direen</h1>
 						<h3 class="uk-text-large uk-text-light">Game Programmer</h3>
 					</header>
 					
@@ -65,7 +65,7 @@
 					<div class="uk-child-width-1-1"  uk-grid>
 						<div class="uk-width-expand@s">
 							<h2 id="about" class="uk-heading-divider title-link"><a href="#about">About me</a></h2>
-							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated in <span class="uk-text-primary uk-text-bold">Computer Science</span> with more than 4 years of experience <span class="uk-text-primary uk-text-bold">developing</span> PC and mobile videogames using both <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal Engine</span> in C#, C++s and other coding languages, and author of several publications on Gamasutra. Honest and open-minded attitude allowing to develop strong bonds in collaborating teams and communities.</p>
+							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated with a bachelor degree in <span class="uk-text-primary uk-text-bold">Games and Virtual Worlds Programming</span>. Since graduating I have been <span class="uk-text-primary uk-text-bold">developing</span> games in both the <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal game engines. <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal</span> Engine, using  C#, C++ and Blueprints. I also have <span class="uk-text-primary uk-text-bold">JS</span> and <span class="uk-text-primary uk-text-bold">SQL</span> experience due to my current employment.</p>
 							<div class="uk-text-large">
 								<span class="uk-margin-small-right" uk-icon="icon: file-pdf; ratio: 2"></span><a class="uk-text-middle" href="./file/MATTEO_GRAIZZARO-PROGRAMMER_RESUME.pdf" target="_blank"><span>Download resume</span></a>
 							</div>
@@ -75,7 +75,7 @@
 							<div class="uk-grid-row-small uk-child-width-1-1" uk-grid>
 								<div class="uk-grid-small@s uk-child-width-auto uk-child-width-1-1@l uk-grid-row-collapse uk-flex-center uk-flex-left@s" uk-grid="masonry: true">
 									<div class="">
-										Email: <a href="mailto:graizzaromatteo@gmail.com" target="_blank"><span>graizzaromatteo@gmail.com</span></a>
+										Email: <a href="mailto:graizzaromatteo@gmail.com" target="_blank"><span>zackary.direen@hotmail.com</span></a>
 									</div>
 									<div class="">
 										Phone: <a href="tel:+393939684029" target="_blank"><span>+39 3939684029</span></a>
