added more original content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="uk-child-width-1-1"  uk-grid>
 						<div class="uk-width-expand@s">
 							<h2 id="about" class="uk-heading-divider title-link"><a href="#about">About me</a></h2>
-							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated with a bachelor degree in <span class="uk-text-primary uk-text-bold">Games and Virtual Worlds Programming</span>. Since graduating I have been <span class="uk-text-primary uk-text-bold">developing</span> games in both the <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal game engines. <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal</span> Engine, using  C#, C++ and Blueprints. I also have <span class="uk-text-primary uk-text-bold">JS</span> and <span class="uk-text-primary uk-text-bold">SQL</span> experience due to my current employment.</p>
+							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated with a bachelor degree in <span class="uk-text-primary uk-text-bold">Games and Virtual Worlds Programming</span>. Since graduating I have been <span class="uk-text-primary uk-text-bold">developing</span> games in both the <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal</span> game engines using  C#, C++ and Blueprints. I also have <span class="uk-text-primary uk-text-bold">JavaScript</span> and <span class="uk-text-primary uk-text-bold">SQL</span> experience due to my current employment.</p>
 							<div class="uk-text-large">
 								<span class="uk-margin-small-right" uk-icon="icon: file-pdf; ratio: 2"></span><a class="uk-text-middle" href="./file/MATTEO_GRAIZZARO-PROGRAMMER_RESUME.pdf" target="_blank"><span>Download resume</span></a>
 							</div>
@@ -75,16 +75,13 @@
 							<div class="uk-grid-row-small uk-child-width-1-1" uk-grid>
 								<div class="uk-grid-small@s uk-child-width-auto uk-child-width-1-1@l uk-grid-row-collapse uk-flex-center uk-flex-left@s" uk-grid="masonry: true">
 									<div class="">
-										Email: <a href="mailto:graizzaromatteo@gmail.com" target="_blank"><span>zackary.direen@hotmail.com</span></a>
+										Email: <a href="mailto:zackary.direen@hotmail.com" target="_blank"><span>zackary.direen@hotmail.com</span></a>
 									</div>
 									<div class="">
-										Phone: <a href="tel:+393939684029" target="_blank"><span>+39 3939684029</span></a>
+										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+39 3939684029</span></a>
 									</div>
 									<div class="">
-										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/matteograizzaro/" target="_blank"><span>/in/matteograizzaro</span></a>
-									</div>
-									<div class="">
-										<span class="uk-margin-small-right" uk-icon="twitter"></span><a class="uk-text-middle" href="https://twitter.com/matteograizzaro" target="_blank"><span>@matteograizzaro</span></a>
+										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackarydireen/" target="_blank"><span>/in/matteograizzaro</span></a>
 									</div>
 								</div>
 							</div>
@@ -102,26 +99,14 @@
 									<span class="uk-text-middle">C#</span>
 								</div>
 								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: typescript; ratio: 1.5"></span>
-									<span class="uk-text-middle">TypeScript</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: mysql; ratio: 1.5"></span>
-									<span class="uk-text-middle">MySQL</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: php; ratio: 1.5"></span>
-									<span class="uk-text-middle">PHP</span>
+									<span class="uk-margin-small-right" uk-icon="icon: sql; ratio: 1.5"></span>
+									<span class="uk-text-middle">SQL</span>
 								</div>
 							</div>
 						</div>
 						<div class="uk-grid-column-medium" uk-grid>
 							<div class="uk-width-small@s uk-flex uk-flex-middle"><div><h4 class="uk-text-uppercase uk-margin-remove"><span>Platforms</span></h4></div></div>
 							<div class="uk-width-expand@s uk-grid-medium uk-flex-center uk-flex-left@s" uk-grid>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: android; ratio: 1.5"></span>
-									<span class="uk-text-middle">Android</span>
-								</div>
 								<div>
 									<span class="uk-margin-small-right" uk-icon="icon: windows; ratio: 1.5"></span>
 									<span class="uk-text-middle">Windows</span>
@@ -153,28 +138,8 @@
 									<span class="uk-text-middle">Github</span>
 								</div>
 								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: nakama2; ratio: 1.5"></span>
-									<span class="uk-text-middle">Nakama</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: asana; ratio: 1.5"></span>
-									<span class="uk-text-middle">Asana</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: slack; ratio: 1.5"></span>
-									<span class="uk-text-middle">Slack</span>
-								</div>
-								<div>
 									<span class="uk-margin-small-right" uk-icon="icon: trello; ratio: 1.5"></span>
 									<span class="uk-text-middle">Trello</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: notion; ratio: 1.5"></span>
-									<span class="uk-text-middle">Notion</span>
-								</div>
-								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: bitbucket; ratio: 1.5"></span>
-									<span class="uk-text-middle">Bitbucket</span>
 								</div>
 							</div>
 						</div>
