--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+39 3939684029</span></a>
 									</div>
 									<div class="">
-										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackarydireen/" target="_blank"><span>/in/matteograizzaro</span></a>
+										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackarydireen/" target="_blank"><span>/in/zackarydireen</span></a>
 									</div>
 								</div>
 							</div>
