--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 										</div>
 										<div class="uk-width-auto">
 											<div class="platform-links uk-grid uk-grid-collapse uk-light" uk-grid>
-												<div><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" target="_blank" uk-icon="icon: google-play;" style="background-color: #414141; padding: 10px;"></a></div>
-												<div class="uk-margin-small-left"><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" target="_blank" uk-icon="icon: app-store;" style="background-color: #0D96F6; padding: 10px;"></a></div>
+												<div><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" target="_blank" uk-icon="icon: google-play;" style="background-color: #181717; padding: 10px;"></a></div>
+												<div class="uk-margin-small-left"><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" target="_blank" uk-icon="icon: app-store;" style="background-color: #9b1717; padding: 10px;"></a></div>
 											</div>
 										</div>
 									</div>
@@ -192,7 +192,7 @@
 										</div>
 										<div class="uk-width-auto">
 											<div class="platform-links uk-grid uk-grid-collapse uk-light" uk-grid>
-												<div><a href="https://matteo-graizzaro.itch.io/ploppem-2" target="_blank" uk-icon="icon: itch-dot-io;" style="background-color: #FA5C5C; padding: 10px;"></a></div>
+												<div><a href="https://matteo-graizzaro.itch.io/ploppem-2" target="_blank" uk-icon="icon: itch-dot-io;" style="background-color: #9b1717; padding: 10px;"></a></div>
 												<div class="uk-margin-small-left"><a href="https://github.com/Vacui/Ploppem-2" target="_blank" uk-icon="icon: github;" style="background-color: #181717; padding: 10px;"></a></div>
 											</div>
 										</div>
