--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										Email: <a href="mailto:zackary.direen@hotmail.com" target="_blank"><span>zackary.direen@hotmail.com</span></a>
 									</div>
 									<div class="">
-										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+39 3939684029</span></a>
+										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+61 480 415 418</span></a>
 									</div>
 									<div class="">
 										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackarydireen/" target="_blank"><span>/in/zackarydireen</span></a>
