attempting to add C++ icon

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 									<span class="uk-margin-small-right" uk-icon="icon: sql; ratio: 1.5"></span>
 									<span class="uk-text-middle">SQL</span>
 								</div>
+								<div>
+									<span class="uk-margin-small-right" uk-icon="icon: cplusplus; ratio: 1.5"></span>
+									<span class="uk-text-middle">C++</span>
+								</div>
 							</div>
 						</div>
 						<div class="uk-grid-column-medium" uk-grid>
