--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									<span class="uk-text-middle">SQL</span>
 								</div>
 								<div>
-									
+									<span class="uk-margin-small-right" uk-icon="icon: cplusplus; ratio: 1.5"></span>
 									<span class="uk-text-middle">C++</span>
 								</div>
 							</div>
