moved languages and attempted to add JavaScript

--- a/index.html
+++ b/index.html
@@ -99,12 +99,16 @@
 									<span class="uk-text-middle">C#</span>
 								</div>
 								<div>
+									<span class="uk-margin-small-right" uk-icon="icon: cplusplus; ratio: 1.5"></span>
+									<span class="uk-text-middle">C++</span>
+								</div>
+								<div>
 									<span class="uk-margin-small-right" uk-icon="icon: sql; ratio: 1.5"></span>
 									<span class="uk-text-middle">SQL</span>
 								</div>
 								<div>
-									<span class="uk-margin-small-right" uk-icon="icon: cplusplus; ratio: 1.5"></span>
-									<span class="uk-text-middle">C++</span>
+									<span class="uk-margin-small-right" uk-icon="icon: javascript; ratio: 1.5"></span>
+									<span class="uk-text-middle">JavaScript</span>
 								</div>
 							</div>
 						</div>
