testing updating the footer

--- a/index.html
+++ b/index.html
@@ -906,7 +906,10 @@
 								Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a> & <a href="https://neuicons.com/" target="_blank">Neu Icons</a>
 							</div>
 							<div class="uk-text-right@s">
-								© 2021 by Graizzaro Matteo
+								© 2023 by Graizzaro Matteo
+							</div>
+							<div class="uk-text-left@s">
+								Website Template made by Graizzaro Matteo 2021
 							</div>
 						</div>
 					</div>
