--- a/index.html
+++ b/index.html
@@ -897,19 +897,19 @@
 				<footer class="uk-margin-large-top uk-padding-small">
 					<div class="uk-text-central uk-child-width-1-1" uk-grid>
 						<div class="uk-child-width-1-1 uk-flex-center uk-child-width-auto@s uk-grid-collapse uk-grid-medium@s" uk-grid>
-							<div>Email: <a href="">graizzaromatteo@gmail.com</a></div>
-							<div>Phone: <a href="">+39 3939684029</a></div>
-							<div>LinkedIn: <a href="">/in/matteo-graizzaro</a></div>
+							<div>Email: <a href="">zackary.direen@hotmail.com</a></div>
+							<div>Phone: <a href="">+61 480 415 418</a></div>
+							<div>LinkedIn: <a href="">/in/zackary-direen</a></div>
 						</div>
 						<div class="uk-child-width-1-1 uk-child-width-1-2@s uk-grid-collapse uk-margin-small-top" uk-grid>
 							<div class="uk-text-left@s">
 								Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a> & <a href="https://neuicons.com/" target="_blank">Neu Icons</a>
 							</div>
 							<div class="uk-text-right@s">
-								© 2023 by Graizzaro Matteo
+								© 2023 by Zackary Direen
 							</div>
 							<div class="uk-text-left@s">
-								Website Template made by Graizzaro Matteo 2021
+								Website template originally made by Graizzaro Matteo - 2021
 							</div>
 						</div>
 					</div>
