--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
 								<div class="uk-navbar-dropdown uk-text-left" uk-drop="boundary: !nav; boundary-align: true; pos: bottom-justify; offset: 0">
 									<div class="uk-navbar-dropdown-grid uk-child-width-expand uk-margin-remove-left" uk-grid>
 										<ul class="uk-subnav uk-subnav-pill uk-flex-center uk-text-center" uk-margin>
-									   		<li><a href="./projects/whatwapp.html">Whatwapp<br><span class="uk-text-italic uk-text-capitalize">2021-Present</span></a></li>
-											<li><a href="./projects/village.html">Canals Village<br><span class="uk-text-italic uk-text-capitalize">2021-2023</span></a></li>
-											<li><a href="./projects/library.html">Whitches Library<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-											<li><a href="./projects/solitaire.html">Solitaire<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-											<li><a href="./projects/ploppem2.html">Ploppem 2<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li> 
-											<li><a href="./projects/tunnel.html">Tunnel<br><span class="uk-text-italic uk-text-capitalize">2021</span></a></li>
-											<li><a href="./projects/ploppem.html">Ploppem<br><span class="uk-text-italic uk-text-capitalize">2020-2021</span></a></li>
-											<li><a href="./projects/nodib.html">Nodib<br><span class="uk-text-italic uk-text-capitalize">2020</span></a></li>
-											<li><a href="./projects/oath.html">Oath<br><span class="uk-text-italic uk-text-capitalize">2018-2019</span></a></li>
+									   		<!--<li><a href="./projects/whatwapp.html">Whatwapp<br><span class="uk-text-italic uk-text-capitalize">2021-Present</span></a></li>-->
+											<li><a href="">Farmmm<br><span class="uk-text-italic uk-text-capitalize">2023-Present</span></a></li>
+											<li><a href="">EasyQuest<br><span class="uk-text-italic uk-text-capitalize">2019-2020</span></a></li>
+											<li><a href="">ZomNom<br><span class="uk-text-italic uk-text-capitalize">2018-2019</span></a></li>
+											<li><a href="">Humourous Overkill<br><span class="uk-text-italic uk-text-capitalize">2017-2018</span></a></li> 
 										</ul>
 									</div>
 								</div>
@@ -153,16 +149,16 @@
 						</div>
 					</div>
 				</section>
-				<section>
+			<!-- 	<section>
 					<h2 id="experience" class="uk-heading-divider title-link"><a href="#experience">Experience</a></h2>
-					<div class="uk-child-width-1-2@s uk-text-center uk-flex uk-flex-center uk-grid-divider" uk-grid> <!--uk-height-match="target: > div > .uk-card; row: true">-->
+					<div class="uk-child-width-1-2@s uk-text-center uk-flex uk-flex-center uk-grid-divider" uk-grid> <!--uk-height-match="target: > div > .uk-card; row: true">
 						<div>
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top@s uk-card-media-left">
 									<img src="./img/projects/whatwapp/logo.png" alt="">
 								</div>
 								<div class="uk-card-header">
-									<h3 class="uk-card-title">Whatwapp</h3>
+									<h3 class="uk-card-title">Farmm</h3>
 								</div>
 								<div class="uk-card-body uk-text-left">
 									<p>Took part in developing features and polishing the experience of the mobile card game Burraco after migrating and adapting the server infrastrucutre from the existing one hosted on Game Sparks to a new one on Nakama.</p>
@@ -170,7 +166,7 @@
 								<div class="uk-card-footer">
 									<div class="uk-grid-collapse uk-flex-middle" uk-grid>
 										<div class="uk-width-expand uk-text-left">
-											<a href="projects/whatwapp.html" class="uk-button uk-button-text" target="_blank">Read more ...</a>
+											<a href="" class="uk-button uk-button-text" target="_blank">Read more ...</a>
 										</div>
 										<div class="uk-width-auto">
 											<div class="platform-links uk-grid uk-grid-collapse uk-light" uk-grid>
@@ -209,7 +205,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> 
+			-->
 				<section>
 					<h2 id="history" class="uk-heading-divider title-link"><a href="#history">History</a></h2>
 					<div class="uk-filter" uk-filter="target: .js-filter; animation: delayed-fade;">
