--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
 							<li data-type="game" data-date="2025-01-01">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
-										<div><span uk-icon="icon: android; ratio: 1.5"></span></div>
+										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
 										<div class="uk-margin-small-top uk-text-break"><h4>Oct 2021 - Present</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
-											<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
-											<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
 										</ul>
 									</div>
 									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
@@ -290,7 +290,7 @@
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
 																<span class="uk-position-relative">
-																	<span>Whatwapp - Burraco team</span>
+																	<span>Farmm</span>
 																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
 																</span>
 															</h3>
@@ -300,9 +300,9 @@
 															<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
-													<div><h4 class="uk-text-capitalize uk-text-italic">Junior Game Developer</h4></div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top">
-														Took part in developing features and polishing the experience of the mobile card game Burraco after migrating and adapting the server infrastrucutre from the existing one hosted on Game Sparks to a new one on Nakama.
+														Taking part in the creation of a farming game in which you breed creatures in order to make more creatures of different types and colours.
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
