updated interest icons

--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
 							<span class="uk-text-middle">Videogames</span>
 						</div>
 						<div>
-							<span class="uk-icon" uk-icon="icon: table; ratio: 1"></span>
-							<span class="uk-text-middle">Tabletop Games</span>
+							<span class="uk-icon" uk-icon="icon: paint-bucket; ratio: 1"></span>
+							<span class="uk-text-middle">Miniature Painting and Gaming</span>
 						</div>
 						<div>
-							<span class="uk-icon" uk-icon="icon: album; ratio: 1"></span>
+							<span class="uk-icon" uk-icon="icon: play; ratio: 1"></span>
 							<span class="uk-text-middle">Music</span>
 						</div>
 						<div>
