adding second point

--- a/index.html
+++ b/index.html
@@ -292,21 +292,26 @@
 													<div class="uk-grid-collapse" uk-grid>
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
-																<span>Farewell North</span>
+																<span>EasyQuest</span>
+																<span class="uk-text-middle" uk-icon="icon: unreal; ratio: 1.25" style="padding-bottom: 4px;"></span>
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-															<li><a href="https://store.steampowered.com/app/1432850/Farewell_North/" uk-icon="icon: steam; ratio: 1.25" target="_blank"></a></li>
-															<li><a href="https://www.localizor.com/farewell-north" uk-icon="icon: localizor; ratio: 1.25" target="_blank"></a></li>
+															<!--
+				   
+																I should add EasyQuest to the Unreal Marketplace....
+																<li><a href="" uk-icon="icon: unreal; ratio: 1.25" target="_blank"></a></li>
+															-->
+															<li><a href="" uk-icon="icon: unreal; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
-													<div><h4 class="uk-text-capitalize uk-text-italic">Italian translator</h4></div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Quest System</h4></div>
 													<div class="uk-margin-small-top">
-														Contributed in translating over 90 lines of text, from the game and the store page, using the online platform <a class="uk-link" href="https://www.localizor.com/">Localizor</a>.
+														Created a modular quest system for kill and gather quests, as well as an inventory system, gathering system. Quests can be accepted or be given automatically when the player moves to a designated zone.
 													</div>
 												</div>
 											</div>
-											<div><img data-src="./img/projects/farewell-north/logo.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
 										</div>
 									</div>
 								</div>
