--- a/index.html
+++ b/index.html
@@ -277,12 +277,10 @@
 							<li data-type="game" data-date="2021-10-11">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
-										<div><span uk-icon="icon: google-translate; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>Feb 2021 - Oct 2021</h4></div>
+										<div><span uk-icon="icon: unreal; ratio: 1.5"></span></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>Jan 2019 - Jan 2020</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
-											<li><a href="" uk-icon="icon: steam; ratio: 1.25" target="_blank"></a></li>
-											<li><a href="" uk-icon="icon: localizor; ratio: 1.25" target="_blank"></a></li>
 										</ul>
 									</div>
 									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
