--- a/index.html
+++ b/index.html
@@ -290,8 +290,10 @@
 													<div class="uk-grid-collapse" uk-grid>
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
-																<span>EasyQuest</span>
-																<span class="uk-text-middle" uk-icon="icon: unreal; ratio: 1.25" style="padding-bottom: 4px;"></span>
+																<span class="uk-position-relative">
+																	<span>EasyQuest</span>
+																	<span class="uk-text-middle" uk-icon="icon: unreal; ratio: 1.25" style="padding-bottom: 4px;"></span>
+																</span>
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
