--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@
 								</div>
 							</li>
 							
-							<li data-type="education" data-date="2020-06">
+							<li data-type="education" data-date="2023-10-7">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
 										<div class="uk-margin-small-top uk-text-break"><h4>2017 - 2020</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
-											<li><a href="https://www.eventhorizonschool.com/" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
 										</ul>
 									</div>
 									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
@@ -334,14 +334,14 @@
 													<div class="uk-grid-collapse" uk-grid>
 														<div class="uk-width-expand">
 															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
-																<span>Event Horizon School</span>
+																<span>Acedamy of Interactive Entertainment</span>
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-															<li><a href="https://www.eventhorizonschool.com/" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+															<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
-													<div><h4 class="uk-text-capitalize uk-text-italic">Course, Game Development, Game Design and Programming</h4></div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Bachelor of Game and Virtual Worlds Programming</h4></div>
 												</div>
 											</div>
 										</div>
