--- a/index.html
+++ b/index.html
@@ -274,6 +274,56 @@
 								</div>
 							</li>
 							
+								<li data-type="game" data-date="2023-10-7">
+								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
+									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
+										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>January 2018 - January 2019</h4></div>
+										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
+										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
+										</ul>
+									</div>
+									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
+										<div class="uk-grid-small uk-margin-remove-left" uk-grid>
+											<div class="uk-width-expand uk-padding-remove-left">
+												<div class="uk-width-expand uk-child-width-1-1 uk-grid-collapse uk-padding-remove-left" uk-grid>
+													<div class="uk-grid-collapse" uk-grid>
+														<div class="uk-width-expand">
+															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
+																<span class="uk-position-relative">
+																	<span>ZomNom</span>
+																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
+																</span>
+															</h3>
+														</div>
+														<!--<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+															<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
+															<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
+														</ul> -->
+													</div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
+													<div class="uk-margin-small-top">
+														ZomNom is a 2.5D platforming game in which the main story is to progress to the final battle in order to become President Barry! but to do this, as you are Barry the Zombie, you need to eat brains! Obviously!
+														One of the key gameplay mechanics that we incorporated within our game was a hunger mechanic. This encourages the player to continue moving and killing enemies in order to eat their brains. We also incorporated the use of power-ups so that the player has different abilities in order to help progress through the game.
+														I was a part of a 6 person team, with 2 Programmers (including myself), 2 Designers and 2 Artists. Some of the things that I was responsible for completing within the project was the Turret mechanics, as well as the way the presidents health scales with the player's, Creating spawners for the enemies within the boss battle, the incorporation of various sounds and visual effects, as well as the application of a post-processing effect when the player takes damage.
+														This project continues to be in development, where we plan to incorporate swinging objects, breakable walls, and planks, advancements to our powerup system and controller support.
+													</div>
+													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
+														<div class="uk-width-auto">
+															<a href="projects/whatwapp.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div><img data-src="./img/projects/whatwapp/logo.png" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+										</div>
+									</div>
+								</div>
+							</li>
+
+
 							<li data-type="game" data-date="2023-10-7">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
