--- a/index.html
+++ b/index.html
@@ -305,14 +305,12 @@
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top">
-														ZomNom is a 2.5D platforming game in which the main story is to progress to the final battle in order to become President Barry! but to do this, as you are Barry the Zombie, you need to eat brains! Obviously!
-														One of the key gameplay mechanics that we incorporated within our game was a hunger mechanic. This encourages the player to continue moving and killing enemies in order to eat their brains. We also incorporated the use of power-ups so that the player has different abilities in order to help progress through the game.
-														I was a part of a 6 person team, with 2 Programmers (including myself), 2 Designers and 2 Artists. Some of the things that I was responsible for completing within the project was the Turret mechanics, as well as the way the presidents health scales with the player's, Creating spawners for the enemies within the boss battle, the incorporation of various sounds and visual effects, as well as the application of a post-processing effect when the player takes damage.
-														This project continues to be in development, where we plan to incorporate swinging objects, breakable walls, and planks, advancements to our powerup system and controller support.
+														ZomNom is a 2.5D platforming game in which the main story is to progress to the final battle in order to become President Barry.
+														Some of the things that I was responsible for completing within the project was the Turret mechanics, as well as the way the presidents health scales with the player's, Creating spawners for the enemies within the boss battle, the incorporation of various sounds and visual effects, as well as the application of a post-processing effect when the player takes damage.
 													</div>
 													<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 														<div class="uk-width-auto">
-															<a href="projects/whatwapp.html" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+															<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
 														</div>
 													</div>
 												</div>
