--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>January 2017 - December 2019</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>2017 - 2019</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
@@ -408,7 +408,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>June 2016 - December 2016</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>2016</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
@@ -441,7 +441,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>June 2015 - June 2016</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>2015-2016</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
@@ -474,7 +474,7 @@
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
-										<div class="uk-margin-small-top uk-text-break"><h4>January 2015 - June 2015</h4></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>2015</h4></div>
 										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
 										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
 											<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
