--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 						<ul class="js-filter uk-child-width-1-1" uk-grid>
 
 							<!--Farmm-->
-							<li data-type="game" data-date="2023-10-7">
+							<li data-type="game" data-date="2023-10-07">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
@@ -277,7 +277,7 @@
 
 
 							<!--ZomNom-->
-							<li data-type="game" data-date="2023-10-7">
+							<li data-type="game" data-date="2018-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
@@ -325,7 +325,7 @@
 							</li>
 
 							<!--Humourous Overkill-->
-							<li data-type="game" data-date="2023-10-7">
+							<li data-type="game" data-date="2017-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
@@ -373,7 +373,7 @@
 
 
 							<!--EasyQuest-->
-							<li data-type="game" data-date="2023-10-7">
+							<li data-type="game" data-date="2019-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: unreal; ratio: 1.5"></span></div>
@@ -418,7 +418,7 @@
 
 
 							<!--AIE Education-->
-							<li data-type="education" data-date="2023-10-7">
+							<li data-type="education" data-date="2019-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
@@ -452,7 +452,7 @@
 
 
 							<!--Cert 4 In IT-->
-							<li data-type="education" data-date="2023-10-7">
+							<li data-type="education" data-date="2016-12-16">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
@@ -473,7 +473,7 @@
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-															<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+															<li><a href="https://cit.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Certificate 4 in Information Technology</h4></div>
@@ -485,7 +485,7 @@
 							</li>
 
 							<!--Cert 4 In Programming-->
-							<li data-type="education" data-date="2023-10-7">
+							<li data-type="education" data-date="2016-07-29">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
@@ -506,7 +506,7 @@
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-															<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+															<li><a href="https://cit.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Certificate 4 in Programming</h4></div>
@@ -518,7 +518,7 @@
 							</li>
 
 							<!--Cert 3 in Information, Digital Media and Technology-->
-							<li data-type="education" data-date="2023-10-7">
+							<li data-type="education" data-date="2015-07-17">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: school; ratio: 1.5"></span></div>
@@ -539,7 +539,7 @@
 															</h3>
 														</div>
 														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
-															<li><a href="https://aie.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
+															<li><a href="https://cit.edu.au" uk-icon="icon: link; ratio: 1.25" target="_blank"></a></li>
 														</ul>
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Certificate 3 in Information, Digital Media and Techonlogy</h4></div>
