--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
 									<span class="uk-margin-small-right" uk-icon="icon: javascript; ratio: 1.5"></span>
 									<span class="uk-text-middle">JavaScript</span>
 								</div>
+								<div>
+									<span class="uk-margin-small-right" uk-icon="icon: html; ratio: 1.5"></span>
+									<span class="uk-text-middle">HTML</span>
+								</div>
 							</div>
 						</div>
 						<div class="uk-grid-column-medium" uk-grid>
