--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 													</div>
 												</div>
 											</div>
-											<div><img data-src="./img/projects/whatwapp/logo.png" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+											<div><img data-src="./img/projects/ZomNom.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
 										</div>
 									</div>
 								</div>
