Added Xplatform and resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<h2 id="about" class="uk-heading-divider title-link"><a href="#about">About me</a></h2>
 							<p><span class="uk-text-primary uk-text-bold">Game Programmer</span> graduated with a bachelor degree in <span class="uk-text-primary uk-text-bold">Games and Virtual Worlds Programming</span>. Since graduating I have been <span class="uk-text-primary uk-text-bold">developing</span> games in both the <span class="uk-text-primary uk-text-bold">Unity</span> and <span class="uk-text-primary uk-text-bold">Unreal</span> game engines using  C#, C++ and Blueprints. I also have <span class="uk-text-primary uk-text-bold">JavaScript</span> and <span class="uk-text-primary uk-text-bold">SQL</span> experience due to my current employment.</p>
 							<div class="uk-text-large">
-								<span class="uk-margin-small-right" uk-icon="icon: file-pdf; ratio: 2"></span><a class="uk-text-middle" href="./file/MATTEO_GRAIZZARO-PROGRAMMER_RESUME.pdf" target="_blank"><span>Download resume</span></a>
+								<span class="uk-margin-small-right" uk-icon="icon: file-pdf; ratio: 2"></span><a class="uk-text-middle" href="./file/ZD_CV.pdf" target="_blank"><span>Download resume</span></a>
 							</div>
 						</div>
 						<div class="width-contacts">
@@ -77,7 +77,7 @@
 										Phone: <a href="tel:+61 480 415 418" target="_blank"><span>+61 480 415 418</span></a>
 									</div>
 									<div class="">
-										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackarydireen/" target="_blank"><span>/in/zackarydireen</span></a>
+										<span class="uk-margin-small-right" uk-icon="linkedin"></span><a class="uk-text-middle" href="https://www.linkedin.com/in/zackary-direen/" target="_blank"><span>/in/zackary-direen</span></a>
 									</div>
 								</div>
 							</div>
@@ -279,6 +279,52 @@
 								</div>
 							</li>
 
+							<!--Xplatform-->
+							<li data-type="game" data-date="2018-12-26">
+								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
+									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
+										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
+										<div class="uk-margin-small-top uk-text-break"><h4>January 2018 - June 2018</h4></div>
+										<span class="uk-padding-small-top uk-position-top-right-out" uk-icon="icon: circle; ratio: 0.7" style="z-index: 1; padding-top: 10px; padding-left: 9px;"></span>
+										<ul class="uk-hidden@s uk-iconnav uk-flex-right uk-margin-remove-left">
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
+											<li><a href="" uk-icon="icon: ; ratio: 1.25" target="_blank"></a></li>
+										</ul>
+									</div>
+									<div class="uk-width-expand uk-child-width-1-1 uk-padding-large-bottom">
+										<div class="uk-grid-small uk-margin-remove-left" uk-grid>
+											<div class="uk-width-expand uk-padding-remove-left">
+												<div class="uk-width-expand uk-child-width-1-1 uk-grid-collapse uk-padding-remove-left" uk-grid>
+													<div class="uk-grid-collapse" uk-grid>
+														<div class="uk-width-expand">
+															<h3 class="uk-text-bold uk-text-uppercase uk-heading-line">
+																<span class="uk-position-relative">
+																	<span>XPlatform</span>
+																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
+																</span>
+															</h3>
+														</div>
+														<!--<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+									<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
+									<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
+								</ul> -->
+													</div>
+													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
+													<div class="uk-margin-small-top">
+														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn. 
+														Our task was to create a game that was fun and enjoyable, as well as having it be compatible with over 3 platforms. We were able to make this game compatible with PC, iOS, Android, Tizen, WebGL, and Windows Phone.
+														<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
+															<div class="uk-width-auto">
+																<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
+															</div>
+														</div>
+													</div>
+											</div>
+											<div><img data-src="./img/projects/XPlatform.gif" alt="" uk-img class="experience-image uk-width-medium uk-height-auto uk-visible@m"></div>
+										</div>
+									</div>
+								</div>
+							</li>
 
 							<!--ZomNom-->
 							<li data-type="game" data-date="2018-12-26">
