--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 								</ul> -->
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
-													<div class="uk-margin-small-top">
+													<div class="uk-margin-small-top" style="margin-right: 1px">
 														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn. 
 														Our task was to create a game that was fun and enjoyable, as well as having it be compatible with over 3 platforms. We were able to make this game compatible with PC, iOS, Android, Tizen, WebGL, and Windows Phone.
 														<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
@@ -357,7 +357,7 @@
 								</ul> -->
 													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
-													<div class="uk-margin-small-top">
+													<div class="uk-margin-small-top" style="margin-right: 1px">
 														ZomNom is a 2.5D platforming game in which the main story is to progress to the final battle in order to become President Barry.
 														Some of the things that I was responsible for completing within the project was the Turret mechanics, as well as the way the presidents health scales with the player's, Creating spawners for the enemies within the boss battle, the incorporation of various sounds and visual effects, as well as the application of a post-processing effect when the player takes damage.
 													</div>
