--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 							</li>
 
 							<!--Xplatform-->
-							<!--<li data-type="game" data-date="2018-6-26">
+							<li data-type="game" data-date="2018-6-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
 									<div class="uk-child-width-1-1 uk-text-right uk-text-italic uk-text-capitalize uk-padding-large-bottom" style="width: 110px;">
 										<div><span uk-icon="icon: windows; ratio: 1.5"></span></div>
@@ -303,12 +303,12 @@
 																	<span class="uk-text-middle" uk-icon="icon: unity2; ratio: 1.25" style="padding-bottom: 4px;"></span>
 																</span>
 															</h3>
-														</div>-->
-														<!--<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
+														</div>
+														<ul class="uk-visible@s uk-iconnav uk-width-auto uk-margin-remove-left uk-background-default uk-flex-middle">
 									<li><a href="https://play.google.com/store/apps/details?id=com.WhatWapp.BurracoOnline" uk-icon="icon: google-play; ratio: 1.25" target="_blank"></a></li>
 									<li><a href="https://apps.apple.com/it/app/burraco-italiano-la-sfida/id1019117289" uk-icon="icon: app-store; ratio: 1.25" target="_blank"></a></li>
-								</ul> -->
-													<!--</div>
+								</ul> 
+													</div>
 													<div><h4 class="uk-text-capitalize uk-text-italic">Game Developer</h4></div>
 													<div class="uk-margin-small-top" style="margin-right: 1px" >
 														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn. 
@@ -324,7 +324,7 @@
 										</div>
 									</div>
 								</div>
-							</li>-->
+							</li>
 							<!--ZomNom-->
 							<li data-type="game" data-date="2018-12-26">
 								<div class="uk-grid-divider uk-grid-column-small" uk-grid>
