--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
 													<div class="uk-margin-small-top" style="margin-right: 1px" >
 														This project was one of the first projects I did within Unity and it was in collaboration with a fellow programmer, Ashley Flynn. 
 														Our task was to create a game that was fun and enjoyable, as well as having it be compatible with over 3 platforms. We were able to make this game compatible with PC, iOS, Android, Tizen, WebGL, and Windows Phone.
+														xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 														<div class="uk-margin-small-top uk-text-left uk-grid-column-small" uk-grid>
 															<div class="uk-width-auto">
 																<a href="" class="uk-button uk-button-text" target="_blank"><span uk-icon="more" class="uk-icon" style="margin-right: 5px"></span><span class="uk-text-middle">Read more</span></a>
